template/kubernetes/dpy-template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:                   # Deployment metadata
  name: nginx-deployment          # Deployment name
  labels:                         # Deployment label
    app: nginx
spec:
  replicas: 3                     # Replica numbers
  selector:                       # Deployment가 Observing을 위한 Selector
    matchLabels:
      app: nginx
  template:                     # Pod template
    metadata:                     # Pod metadata
      labels:                       # Pod label
        app: nginx
    spec:
      containers:
      - name: nginx                 # Pod name
        image: nginx:1.14.2         # Image name
        ports:
        - containerPort: 80
