template/kubernetes/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: np-test
spec:
  type: NodePort
  selector:
    app: np-test          # 여기서는 Deployment 이름으로 지정 
  ports:
    - name: http
      protocol: TCP
      port: 80            # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
      targetPort: 80
      # Optional field
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
      nodePort: 30007
